<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name"></string>
    <string name="profile_pic">Profile Picture</string>
    <string name="login_label">Log in</string>
    <string name="intent_scheme">oauth</string>
    <string name="intent_host">codepathtweets</string>
    <string name="sample_username">ok_testacc</string>
    <string name="sample_tweet">This is my tweet!</string>
    <string name="logout">Log Out</string>
    <string name="what_s_happening">What\'s happening?</string>
    <string name="tweet">Tweet</string>
    <string name="counter_max_length">280</string>
    <string name="sample_name">Orhun Kolgeli</string>
    <string name="embedded_image_description">Embedded image</string>
    <string name="compose">Compose</string>
    <string name="twitter_icon">Twitter Icon</string>
    <string name="twitter_logo">Twitter Logo</string>
    <string name="empty_tweet">Tweet cannot be empty</string>
    <string name="too_long_tweet">Tweet cannot be longer than 280 characters</string>
    <string name="reply">Reply</string>
</resources>