<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/username"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/profile_pic"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@id/tvUserName"
        tools:text="@string/sample_username" />

    <TextView
        android:id="@+id/tvBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvScreenName"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:textColor="#000000"
        tools:text="@string/sample_tweet" />

    <ImageView
        android:id="@+id/embedded_image"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvBody"
        android:layout_alignStart="@+id/tvBody"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/embedded_image_description"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvScreenName"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:text="@string/sample_name"
        android:textColor="#000000"
        android:textStyle="bold" />
</RelativeLayout>