<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComposeActivity">

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/input_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="0dp"
      app:counterEnabled="true"
      app:counterMaxLength="@string/counter_max_length">

    <EditText
        android:id="@+id/etCompose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/what_s_happening"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:minLines="5"
        android:textColorHint="#546E7A"
        tools:ignore="SpeakableTextPresentCheck" />

  </com.google.android.material.textfield.TextInputLayout>

  <Button
      android:id="@+id/btnTweet"
      android:layout_width="93dp"
      android:layout_height="wrap_content"
      android:layout_below="@+id/input_layout"
      android:layout_alignParentStart="true"
      android:layout_alignParentEnd="true"
      android:layout_marginStart="160dp"
      android:layout_marginTop="2dp"
      android:layout_marginEnd="158dp"
      android:background="@color/twitter_blue"
      android:text="@string/tweet"
      android:textColor="#FFFFFF"
      tools:ignore="TextContrastCheck" />


</RelativeLayout>